`AppListItem` misc tweaks
* Restore text marquee on all layouts
* Text size and color tweaks
* List layout image has round corners
* Clean up unneeded attributes

--- a/app/src/main/res/layout/app_item_grid_compact.xml
+++ b/app/src/main/res/layout/app_item_grid_compact.xml
@@ -33,16 +33,14 @@
             android:id="@+id/text_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:alpha="242.25"
+            android:paddingHorizontal="8dp"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
             android:singleLine="true"
             android:textAppearance="?android:attr/textAppearanceListItem"
+            android:textSize="14sp"
             android:textColor="@android:color/white"
             android:textStyle="bold"
-            app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toTopOf="@id/text_subtitle"
             app:layout_constraintEnd_toEndOf="@id/icon"
             app:layout_constraintStart_toStartOf="@id/icon"
@@ -52,16 +50,15 @@
             android:id="@+id/text_subtitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:paddingHorizontal="8dp"
             android:layout_marginBottom="8dp"
-            android:alpha="242.25"
             android:ellipsize="marquee"
-            android:fadingEdge="horizontal"
             android:marqueeRepeatLimit="marquee_forever"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
             android:singleLine="true"
             android:textAppearance="?android:attr/textAppearanceListItemSecondary"
+            android:textSize="12sp"
             android:textColor="@android:color/white"
+            android:alpha="0.95"
             app:layout_constraintBottom_toBottomOf="@id/icon"
             app:layout_constraintEnd_toEndOf="@id/icon"
             app:layout_constraintStart_toStartOf="@id/icon"
