--- a/app/src/main/res/layout/app_item_grid.xml
+++ b/app/src/main/res/layout/app_item_grid.xml
@@ -37,7 +37,8 @@
         android:marqueeRepeatLimit="marquee_forever"
         android:singleLine="true"
         android:textColor="?android:attr/textColorPrimary"
-        android:textSize="12sp"
+        android:textAppearance="?android:attr/textAppearanceListItem"
+        android:textSize="14sp"
         tools:text="Title" />
 
     <TextView
@@ -50,6 +51,8 @@
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
         android:singleLine="true"
+        android:textAppearance="?android:attr/textAppearanceListItemSecondary"
+        android:textColor="?android:attr/textColorSecondary"
         android:textSize="12sp"
         tools:text="Subtitle" />
 </LinearLayout>
