--- a/app/src/main/res/layout/app_item_linear.xml
+++ b/app/src/main/res/layout/app_item_linear.xml
@@ -10,7 +10,7 @@
     android:focusable="true"
     android:padding="16dp">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/icon"
         android:layout_width="56dp"
         android:layout_height="56dp"
@@ -18,14 +18,16 @@
         android:focusable="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/RoundedAppImage"
         tools:src="@drawable/default_icon" />
 
     <TextView
         android:id="@+id/text_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:ellipsize="end"
+        android:layout_marginStart="12dp"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
         android:singleLine="true"
         android:textAppearance="?android:attr/textAppearanceListItem"
         app:layout_constrainedWidth="true"
@@ -40,14 +42,16 @@
         android:id="@+id/text_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:singleLine="true"
         android:textAppearance="?android:attr/textAppearanceListItemSecondary"
         android:textColor="@android:color/tertiary_text_light"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintStart_toEndOf="@id/icon"
+        app:layout_constraintStart_toStartOf="@+id/text_title"
         app:layout_constraintTop_toBottomOf="@+id/text_title"
         tools:text="SubTitle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
