--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,19 +3,13 @@
 
     <style name="RoundedAppImage">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">6dp</item>
-    </style>
-
-    <style name="ChipChoice.Material">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorOnPrimary">@color/colorPrimary</item>
+        <item name="cornerSize">@dimen/corner_radius</item>
     </style>
 
     <style name="ChipChoice" parent="Widget.MaterialComponents.Chip.Choice">
         <item name="android:textAllCaps">true</item>
         <item name="chipStartPadding">8dp</item>
         <item name="chipEndPadding">8dp</item>
-        <item name="materialThemeOverlay">@style/ChipChoice.Material</item>
         <item name="shapeAppearance">@style/ShapeAppearance.MaterialComponents.LargeComponent</item>
     </style>
 </resources>
